Fix oversized divs - Overlap issue
For some reason, the divs don't stay in the grid spaces anymore. This fixes that but I still don't know why that changed.

--- a/css/dashStyles.css
+++ b/css/dashStyles.css
@@ -315,8 +315,7 @@ span.completedHrsStatement span {
 
 div.addHoursContainer {
     width: 100%;
-    height: 100%;
-    min-height: 50px;
+    height: 50px;
     background-color: #ebebeb;
     border-radius: 8px;
 }
