--- a/messages/declinedFile.css
+++ b/messages/declinedFile.css
@@ -1,7 +1,6 @@
 div.declinedFileContainer {
     width: 100%;
-    height: 100%;
-    min-height: 50px;
+    height: 50px;
     background-color:#ebebeb;
     border-radius: 8px;
     margin-bottom: 5px;
